# llmfs

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  agent_memory.py  basic_usage.py  code_search.py  infinite_context.py  langchain_agent.py  mcp_config.json  multi_agent.py  ollama_autonomous_memory.py  ollama_chat.py  ollama_context_overflow_test.py  ollama_demo.py  openai_agent.py  requirements.txt
llmfs/: __init__.py
llmfs/cli/: commands.py  main.py
llmfs/compression/: chunker.py  summarizer.py
llmfs/context/: __init__.py  extractor.py  importance.py  index_builder.py  manager.py  middleware.py
llmfs/core/: async_fs.py  exceptions.py  filesystem.py  memory_layers.py  memory_object.py
llmfs/embeddings/: base.py  local.py
llmfs/graph/: memory_graph.py
llmfs/integrations/: __init__.py  fuse_mount.py  langchain.py  openai_tools.py
llmfs/mcp/: __init__.py  prompts.py  server.py  tools.py
llmfs/query/: __init__.py  executor.py  parser.py
llmfs/retrieval/: engine.py  ranker.py
llmfs/storage/: metadata_db.py  vector_store.py
tests/: test_chunker.py  test_cli.py  test_compression.py  test_context_manager.py  test_extractor.py  test_filesystem.py  test_graph.py  test_importance.py  test_index_builder.py  test_integration.py  test_langchain.py  test_mcp.py  test_memory_layers.py  test_memory_object.py  test_middleware.py  test_mql_executor.py  test_mql_parser.py  test_new_features.py  test_openai_tools.py  test_retrieval.py  test_storage.py
